--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,5 +1,4 @@
 #summary One-sentence summary of this page.
-#labels Featured
 
 = Introduction =
 
@@ -12,3 +11,14 @@ Add your content here.  Format your content with:
   * Text in *bold* or _italic_
   * Headings, paragraphs, and lists
   * Automatic links to other wiki pages
+
+
+
+sadfasdfasdfasdf
+as
+
+sad
+f
+sadf
+sa
+df
